--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.5.0
+  curved_navigation_bar: ^1.0.3
   #shared_preferences:
   shared_preferences: ^2.2.0
 
