--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,10 +79,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: FontMain
+    - family: Pacifico
       fonts:
-        - asset: assets/fonts/TiltPrism-Regular-VariableFont_XROT,YROT.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  #      - asset: assets/fonts/TiltPrism-Regular-VariableFont_XROT,YROT.ttf
+         - asset: assets/fonts/Pacifico-Regular.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
