--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   badges: ^3.1.2
   animated_text_kit: ^4.2.2
   pin_code_fields: ^8.0.1
+  math_expressions: ^2.4.0
   #shared_preferences:
   shared_preferences: ^2.2.0
 
