--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   math_expressions: ^2.4.0
   #shared_preferences:
   shared_preferences: ^2.2.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
